[package]
name = "sugondat-nmt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10.6", default-features = false }
nmt-rs = { git = "https://github.com/Sovereign-Labs/nmt-rs.git", rev = "627f9622a987db4a0b22dc04107442f4010096fb", default-features = false }
serde = { version = "1.0.130", default-features = false, optional = true }
sugondat-serde-util = { path = "../serde-util", optional = true }

[features]
default = ["native"]
native = []
serde = ["dep:serde", "dep:sugondat-serde-util", "nmt-rs/serde"]
