[package]
name = "sugondat-serde-util"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", default-features = false }
hex = { version = "0.4.3" }
base64 = "0.21.5"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.108"
serde = { version = "1.0.130", features = ["derive"] }
