[package]
name = "sugondat-serde-util"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = { workspace = true }
serde = { version = "1.0.130", default-features = false }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
