[package]
name = "sugondat-shim"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sugondat-nmt = { workspace = true, default-features = true, features = ["serde"] }
sugondat-subxt = { workspace = true }
sugondat-primitives = { workspace = true, default-features = true }
sugondat-shim-common-sovereign = { workspace = true, default-features = true, features = ["server"] }
sugondat-shim-common-rollkit = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["ws-client", "server"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
async-trait = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true, features = ["subxt"] }
sha2 = { workspace = true, default-features = true }
url = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
temp-dir = { workspace = true }
