[package]
name = "sugondat-subxt"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { workspace = true, features = ["jsonrpsee"]  }
parity-scale-codec = { workspace = true, default-features = true  }
anyhow = { workspace = true }
