[package]
name = "demo-stf"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", default-features = false }
borsh = { version = "0.10.3", default-features = false }
serde = { version = "1.0.190", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
clap = { version = "4.4.7", features = ["derive"], optional = true }
toml = { version = "0.8.0", optional = true}
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types", "http-client", "server"], optional = true  }
tokio = { version = "1", features = ["full"], optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
tracing = { version = "0.1.40", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "e83d3aa", optional = true }
secp256k1 = { version = "0.27.0", optional = true, default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }

sov-stf-runner = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-cli = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", optional = true, rev = "6058b31" }
sov-sequencer-registry = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-blob-storage = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-nft-module = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
simple-nft-module = { path = "../../simple-nft-module" }

sov-chain-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-modules-stf-template = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-value-setter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-accounts = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-sequencer = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", optional = true, rev = "6058b31" }
# Only enable the evm on "experimental" feature
sov-evm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", optional = true, rev = "6058b31" }


[dev-dependencies]
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["mocks"], rev = "6058b31" }
sov-data-generators = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
# TODO: really?! why there is a recursive dependency?
demo-stf = { path = ".", features = ["native"] }
tempfile = "3.8"
rand = "0.8"

[features]
default = []
offchain = ["sov-nft-module/offchain"]
experimental = ["sov-evm/experimental", "reth-primitives", "secp256k1"]
native = [
    "sov-stf-runner/native",
    "sov-bank/native",
    "sov-nft-module/native",
    "simple-nft-module/native",
    "sov-cli",
    "sov-accounts/native",
    "sov-sequencer-registry/native",
    "sov-blob-storage/native",
    "sov-chain-state/native",
    "sov-value-setter/native",
    "sov-modules-api/native",
    "sov-rollup-interface/mocks",
    "sov-rollup-interface/native",
    "sov-modules-stf-template/native",
    "sov-sequencer",
    "clap",
    "serde_json",
    "jsonrpsee",
    "tokio",
    "toml",
]
