[package]
name = "sov-demo-rollup"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
resolver = "2"
default-run = "sov-demo-rollup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# non-optional dependencies
ikura-da-adapter = { path = "../../../adapters/sovereign" }

const-rollup-config = { path = "../const-rollup-config" }
sov-stf-runner = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["native"], rev = "6058b31" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["native"], rev = "6058b31" }

sov-modules-rollup-template = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-modules-stf-template = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["native"], rev = "6058b31" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["native"], rev = "6058b31" }
sov-nft-module = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
demo-stf = { path = "./stf", features = ["native"] }
sov-ledger-rpc = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["server",], rev = "6058b31" }
risc0 = { path = "./provers/risc0" }
borsh = { version = "0.10.3", default-features = false , features = ["bytes"]}
async-trait = "0.1.71"
anyhow = { version = "1.0.68", default-features = false }
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types", "http-client", "server"] }
serde = { version = "1.0.190", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.40", default-features = false }
hex = { version = "0.4.3", optional = true, default-features = false, features = ["alloc", "serde"] }

tokio = { version = "1", features = ["full"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", optional = true, rev = "e83d3aa" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

sov-db = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-ethereum = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", optional = true, rev = "6058b31" }
sov-sequencer = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-risc0-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["native"], rev = "6058b31" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["native"], rev = "6058b31" }
sov-cli = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }

clap = { version = "4.4.7", features = ["derive"] }
secp256k1 = { version = "0.27.0", optional = true, default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }


[dev-dependencies]
sov-rng-da-service = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }
sov-evm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["smart_contracts"], rev = "6058b31" }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = ["native"], rev = "6058b31" }
sov-zk-cycle-macros = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6058b31" }

borsh = { version = "0.10.3", default-features = false , features = ["bytes"]}
bincode = "1.3.3"
sha2 = { version = "0.10.6", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tempfile = "3.8"
proptest = { version = "1.3.1", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }

ethereum-types = "0.14.1"
ethers-core = { version = "=2.0.10", default-features = false }
ethers-contract = "=2.0.10"
ethers-middleware = { version = "=2.0.10", default-features = false }
ethers-providers = { version = "=2.0.10", default-features = false }
ethers-signers = { version = "=2.0.10", default-features = false }
ethers = "=2.0.10"
revm = { git = "https://github.com/bluealloy/revm", rev = "516f62cc" }

reqwest = "0.11"
tendermint = "0.32"
prometheus = "0.11.0"
prettytable-rs = "^0.10"
criterion = "0.5.1"
log = "0.4"
log4rs = "1.0"
regex = "1.10"

[features]
default = [
] # Deviate from convention by making the "native" feature active by default. This aligns with how this package is meant to be used (as a binary first, library second).
experimental = ["default", "sov-ethereum/experimental", "reth-primitives", "demo-stf/experimental", "sov-ethereum/local", "secp256k1"]

bench = ["hex", "sov-risc0-adapter/bench", "sov-zk-cycle-macros/bench", "risc0/bench"]
offchain = ["demo-stf/offchain"]

[[bench]]
name = "rollup_bench"
path = "benches/node/rollup_bench.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "rollup_coarse_measure"
path = "benches/node/rollup_coarse_measure.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "prover_bench"
path = "benches/prover/prover_bench.rs"
harness = false
required-features = ["bench"]


[[bin]]
name = "sov-cli"
path = "src/sov-cli/main.rs"

[[bin]]
name = "sov-nft-script"
path = "src/bin/sov_nft_script.rs"

[[bin]]
name = "sov-demo-rollup"
path = "src/main.rs"
